--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>telegrambots-meta</artifactId>
             <version>6.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
 </project>
