1poka rabotaet tolko test pered refaktorom

--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,16 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
             <version>3.1.2</version>
         </dependency>
+
+
+
+
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>1.18</version>
+        </dependency>
+<!----> это для разнацветного вывода в консоль
+
     </dependencies>
 </project>
