Rabotaet - normalno bezProbelov-trebyrt lytogoRefactoringa - A luuchshe perevod na sushosty chisto

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,17 @@
             <version>3.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.brotli</groupId>
+            <artifactId>dec</artifactId>
+            <version>0.1.2</version>
+        </dependency>
+
+
+
+
+
+
 
 
 
